# citenode

./: .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  STRATEGY.md  init.py  pyproject.toml
.claude/: DDD.md  TDD.md  settings.json
.claude/agents/: README.md  docs-sync.md  dry-reviewer.md  simplicity-reviewer.md
.claude/commands/: review.md
.claude/decisions/: README.md  _adr_template.md
.claude/designs/: _template.md
.claude/hooks/: periodic-review-nudge.sh  pre-edit-reuse.sh  stop-simplify.sh
.claude/solutions/: README.md  _template.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
_service-template/: .python-version  pyproject.toml
scripts/: check_tdd.py  lint_service.py  new-service.sh
services/verdict/: .env.example  .envrc  README.md  docker-compose.yml  pyproject.toml
services/verdict/notebooks/: explore.ipynb
services/verdict/src/verdict/: cascade.py  config.py  embedding.py  models.py  pipeline.py  ports.py  prompting.py  retrieval.py  triage.py  vectors.py
services/verdict/src/verdict/adapters/: embeddings.py  helix_store.py  inmemory_store.py  ollama_embeddings.py  openrouter.py
services/verdict/src/verdict/council/: aggregate.py  chairman.py  members.py  rank.py  run.py
services/verdict/src/verdict/eval/: ablation.py  calibration.py  end_to_end.py  reasoning.py  scifact.py
services/verdict/src/verdict/ingest/: corpus.py  openalex.py
services/verdict/src/verdict/prompts/: chairman_system.j2  chairman_user.j2  cheap_verdict_system.j2  cheap_verdict_user.j2  member_system.j2  member_user.j2  rank_system.j2  rank_user.j2  stance_system.j2  stance_user.j2  triage_system.j2  triage_user.j2
services/verdict/tests/: factories.py  helix_support.py  http_support.py  model_stubs.py  test_ablation.py  test_aggregate.py  test_calibration.py  test_cascade.py  test_chairman.py  test_corpus.py  test_embedding.py  test_embeddings.py  test_end_to_end.py  test_helix_store.py  test_inmemory_store.py  test_members.py  test_models.py  test_ollama_embeddings.py  test_openalex.py  test_openrouter.py  test_pipeline.py  test_ports.py  test_prompting.py  test_rank.py  test_reasoning.py  test_retrieval.py  test_run.py  test_scifact.py  test_store_conformance.py  test_triage.py  test_vectors.py
