[project]
name = "citenode"
version = "0.1.0"
description = "Claim-verification assistant: citation-graph retrieval with a cross-family LLM council that refutes to fake consensus"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pylint>=3.3.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "codespell>=2.4.0",
]

[tool.uv]
package = false

# ---------------------------------------------------------------------------
# Codespell
# ---------------------------------------------------------------------------
[tool.codespell]
ignore-words-list = "astroid"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 119
exclude = ["build/", "dist/", ".venv/", ".mypy_cache/", ".ruff_cache/", ".pytest_cache/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "D"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

# Docstring style: "numpy" (default), "google", or "pep257".
[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]   # template convention: __init__.py stays empty
"**/tests/**" = ["D"]       # tests use descriptive names, not docstrings (matches services/*/tests/)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
# pydantic.mypy plugin lives in each service's config (where pydantic is a dep), not root.
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true

# ---------------------------------------------------------------------------
# Pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
load-plugins = ["pylint.extensions.mccabe"]
fail-under = 9.5

[tool.pylint."MESSAGES CONTROL"]
disable = ["line-too-long"]

[tool.pylint.design]
max-args = 5
max-locals = 15
max-branches = 10
max-returns = 5
max-statements = 60
max-complexity = 10

[tool.pylint.similarities]
min-similarity-lines = 6
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
