[project]
name = "{{service-name}}"
version = "0.1.0"
description = "{{project-description}} — {{service-name}} service"
requires-python = ">={{python-version}}"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "mypy>=1.13.0",
    "pylint>=3.3.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{service-module}}"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# MyPy
# Service-local mypy config. Add `plugins = ["pydantic.mypy"]` if this
# service uses pydantic, and add other framework plugins as needed.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "{{python-version}}"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true

# ---------------------------------------------------------------------------
# Pylint
# Line length is owned by ruff (configured at root). Disabling here avoids
# tool-conflict noise — ruff is the single source of truth for formatting.
# ---------------------------------------------------------------------------
[tool.pylint."MESSAGES CONTROL"]
disable = ["line-too-long"]
