[project]
name = "verdict"
version = "0.1.0"
description = "Claim-verification assistant: citation-graph retrieval with a cross-family LLM council that refutes to fake consensus — verdict service"
requires-python = ">=3.12"
dependencies = [
    "helix-db>=0.1.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pyalex>=0.21",
    "pydantic>=2.12.5,<2.13",
    "pydantic-ai==1.103.0",
    "pydantic-settings>=2.12,<2.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "mypy>=1.13.0",
    "pylint>=3.3.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verdict"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# MyPy
# Service-local mypy config. Add `plugins = ["pydantic.mypy"]` if this
# service uses pydantic, and add other framework plugins as needed.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true

# pyalex ships no type stubs (no py.typed marker).
[[tool.mypy.overrides]]
module = ["pyalex.*"]
ignore_missing_imports = true

# helix-db (v3 SDK) ships no type stubs.
[[tool.mypy.overrides]]
module = ["helixdb.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pylint
# Line length is owned by ruff (configured at root). Disabling here avoids
# tool-conflict noise — ruff is the single source of truth for formatting.
# ---------------------------------------------------------------------------
[tool.pylint."MESSAGES CONTROL"]
disable = ["line-too-long", "too-few-public-methods"]

[tool.pylint.design]
max-args = 5
max-attributes = 10

[tool.pylint.basic]
# Tests and private helpers don't require docstrings (mirrors ruff's tests D-ignore).
no-docstring-rgx = "^(test_|_)"
